# aurora-workspace

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md
.env/: mainnet.env
.github/workflows/: rust.yaml
engine/: Cargo.toml
engine/src/: contract.rs  lib.rs  operation.rs
engine/tests/: engine_tests.rs  engine_view_tests.rs  fungible_token_tests.rs  owner_call_tests.rs  self_call_tests.rs  utils.rs
eth-connector/: Cargo.toml
eth-connector/src/: contract.rs  lib.rs  operation.rs  types.rs
eth-connector/tests/: fungible_token_tests.rs
res/mock_engine/: Cargo.toml  README.md
res/mock_engine/src/: fungible_token.rs  lib.rs  submit.rs
res/mock_eth_connector/: Cargo.toml  README.md  rust-toolchain.toml
res/mock_eth_connector/src/: admin_controlled.rs  connector.rs  ft.rs  lib.rs  migration.rs  proof.rs  storage.rs
res/mock_evm/: Cargo.toml  README.md  build.sh
res/mock_evm/src/: ft.rs  lib.rs  metadata.rs  out.rs  storage.rs
src/: contract.rs  error.rs  impls.rs  input.rs  lib.rs  operation.rs  operations.rs  result.rs
tests/: common.rs  ft_tests.rs
utils/: Cargo.toml
utils/src/: compile.rs  lib.rs  macros.rs  results.rs  transactions.rs
workspace/: Cargo.toml
workspace-engine/: Cargo.toml
workspace-engine/src/: contract.rs  lib.rs  operation.rs  result.rs
workspace-engine/tests/: authorized_call_tests.rs  engine_tests.rs  engine_view_tests.rs  fungible_token_tests.rs  self_call_tests.rs  utils.rs
workspace-eth-connector/: Cargo.toml
workspace-eth-connector/src/: contract.rs  error.rs  lib.rs  operation.rs  result.rs  types.rs
workspace-eth-connector/tests/: fungible_token_tests.rs  utils.rs
workspace-types/: Cargo.toml
workspace-types/src/: error.rs  input.rs  lib.rs  output.rs
workspace-types/src/output/: mod.rs  submit_return.rs
workspace-utils/: Cargo.toml
workspace-utils/src/: lib.rs  macros.rs  results.rs  transactions.rs
workspace/src/: contract.rs  error.rs  lib.rs  operation.rs  result.rs
workspace/tests/: authorized_call_tests.rs  common.rs  engine_tests.rs  engine_view_tests.rs  ft_tests.rs  fungible_token_tests.rs  owner_call_tests.rs  pub_call_tests.rs  pub_view_tests.rs  self_call_tests.rs  utils.rs
