[workspace]
members = [
    "engine",
    "eth-connector",
    "utils"
]
exclude = [
    "res/mock_engine",
    "res/mock_eth_connector"
]
resolver = "2"

[workspace.package]
authors = ["Aurora Labs <hello@aurora.dev>"]
edition = "2021"
homepage = "https://github.com/aurora-is-near/aurora-engine"
repository = "https://github.com/aurora-is-near/aurora-engine"
license = "CC0-1.0"
readme = "README.md"
version = "0.3.2"

[workspace.dependencies]
anyhow = "1"
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", branch = "develop", default-features = false, features = ["impl-serde", "borsh-compat"] }
near-contract-standards = "4.1"
near-sdk = "4.1"
near-units = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
workspaces = "0.7.0"
