[workspace]
members = [
    "engine",
    "eth-connector",
    "utils"
]
exclude = [
    "res/mock_engine",
    "res/mock_eth_connector"
]
resolver = "2"

[workspace.package]
authors = ["Aurora Labs <hello@aurora.dev>"]
edition = "2021"
homepage = "https://github.com/aurora-is-near/aurora-engine"
repository = "https://github.com/aurora-is-near/aurora-engine"
license = "CC0-1.0"
readme = "README.md"
version = "0.4.1"

[workspace.dependencies]
anyhow = "1"
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.8.0", default-features = false, features = ["impl-serde"] }
near-contract-standards = "5.11"
near-sdk = "5.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
near-workspaces = "0.18"
borsh = "^1"

[patch.crates-io]
parity-secp256k1 = { git = 'https://github.com/paritytech/rust-secp256k1', rev = "d05fd8e" }
