[package]
name = "aurora-workspace-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
description = "Aurora EVM contract for the Near workspaces library"

[dependencies]
aurora-workspace-utils = { path = "../utils" }

anyhow.workspace = true
aurora-engine-types.workspace = true
near-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
workspaces.workspace = true

[dev-dependencies]
hex = "0.4.3"
ethereum-types = { version = "0.14", default-features = false, features = ["serialize"] }
lazy_static = "1.4"
tokio = { version = "1" }

[features]
default = []
