[package]
name = "aurora-workspace-eth-connector"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Aurora Workspace Eth Connector is a library for the Aurora Eth Connector based on NEAR Protocol."

[dependencies]
aurora-workspace-utils = { path = "../utils" }

anyhow.workspace = true
aurora-engine-types.workspace = true
near-contract-standards.workspace = true
near-sdk.workspace = true
near-units.workspace = true
serde.workspace = true
serde_json.workspace = true
workspaces.workspace = true

[dev-dependencies]
hex = "0.4.3"
lazy_static = "1.4"
tokio = { version = "1", features = ["macros"] }

[features]
