[package]
name = "aurora-workspace-utils"
version = "0.3.0"
authors = [ "Aurora <hello@aurora.dev>" ]
edition = "2021"
readme = "README.md"

[dependencies]
anyhow = "1"
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", branch = "develop", default-features = false, features = ["std", "impl-serde", "borsh-compat"] }
near-sdk = "4.1"
near-units = "0.2"
serde = { version = "1", features = ["derive"] }
tokio = "1"
workspaces = "0.7"
