[package]
name = "aurora-workspace-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
aurora-engine-types.workspace = true
near-sdk.workspace = true
serde.workspace = true
tokio = "1"
near-workspaces.workspace = true
cargo-near-build.workspace = true
