[package]
name = "aurora-workspace-engine"
version = "0.3.0"
authors = [ "Aurora <hello@aurora.dev>" ]
edition = "2021"
readme = "README.md"
description = "Aurora EVM contract for the Near workspaces library"

[dependencies]
anyhow = "1"
aurora-engine = { git = "https://github.com/aurora-is-near/aurora-engine.git", branch = "develop", features = ["borsh-compat"] }
aurora-engine-sdk = { git = "https://github.com/aurora-is-near/aurora-engine.git", branch = "develop", features = ["borsh-compat"] }
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", branch = "develop", default-features = false, features = ["std", "impl-serde", "borsh-compat"] }
aurora-workspace-types = { path = "../workspace-types" }
aurora-workspace-utils = { path = "../workspace-utils" }
borsh = { version = "0.9", default-features = false }
ethabi = { version = "18" }
ethereum-types = { version = "0.14", default-features = false, features = ["serialize"] }
near-sdk = "4.1"
near-contract-standards = "4.1"
near-primitives = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
workspaces = "0.7.0"

[dev-dependencies]
hex = "0.4.3"
lazy_static = "1.4"
tokio = { version = "1" }

[features]
default = []
eth-primitives = []
full-serde = []
