[package]
name = "aurora-workspace-eth-connector"
version = "0.1.0"
authors = [ "Aurora <hello@aurora.dev>" ]
edition = "2021"
description = "Aurora Workspace Eth Connector is a library for the Aurora Eth Connector based on NEAR Protocol."

[dependencies]
anyhow = "1"
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", rev = "d9763085157188055f62752fd499ac4c7db8331e",  features = ["impl-serde"] }
aurora-workspace-types = { path = "../workspace-types" }
aurora-workspace-utils = { path = "../workspace-utils" }
borsh = { version = "0.9", default-features = false }
near-sdk = "4.1"
near-contract-standards = "4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
workspaces = "0.7.0"

[dev-dependencies]
hex = "0.4.3"
lazy_static = "1.4"
tokio = { version = "1" }

[features]
