[package]
name = "aurora-workspace-types"
version = "0.3.0"
authors = [ "Aurora <hello@aurora.dev>" ]
edition = "2021"
readme = "README.md"

[dependencies]
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", branch = "develop", default-features = false, features = ["std", "impl-serde", "borsh-compat"] }
ethereum-types = { version = "0.14", default-features = false, features = ["serialize", "rlp"] }
near-sdk = "4.1"
near-account-id = "0.15"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
rlp = "0.5"
workspaces = "0.7.0"

[dev-dependencies]
hex = "0.4.3"

[features]
deposit-withdraw = []
