[package]
name = "aurora-workspace"
version = "0.1.0"
authors = [ "Aurora <hello@aurora.dev>" ]
edition = "2021"
readme = "README.md"
description = "Aurora EVM contract for the Near workspaces library"

[dependencies]
aurora-engine = { git = "https://github.com/aurora-is-near/aurora-engine.git", rev = "d9763085157188055f62752fd499ac4c7db8331e",  features = ["impl-serde"] }
aurora-engine-sdk = { git = "https://github.com/aurora-is-near/aurora-engine.git", rev = "d9763085157188055f62752fd499ac4c7db8331e" }
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", rev = "d9763085157188055f62752fd499ac4c7db8331e",  features = ["impl-serde"] }
aurora-workspace-types = { path = "../workspace-types" }
borsh = { version = "0.9", default-features = false }
ethabi = { version = "18", optional = true }
ethereum-types = { version = "0.14", default-features = false, features = ["serialize"] }
near-sdk = "4.1"
near-contract-standards = "4.1"
near-primitives = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
workspaces = "0.7.0"

[dev-dependencies]
anyhow = "1"
hex = "0.4.3"
lazy_static = "1.4"
tokio = { version = "1" }

[features]
default = []
eth-primitives = []
full-serde = []
deposit-withdraw = ["aurora-workspace-types/deposit-withdraw"]
