[package]
name = "mock_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.3.1", default-features = false, features = ["borsh-compat"] }
hex = "0.4.3"
near-sdk = "4.1"
near-contract-standards = "4.1"
serde = { version = "1", features = [ "derive" ] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
