[package]
name = "mock_eth_connector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aurora-eth-connector = { version = "0.3.0", git = "https://github.com/aurora-is-near/aurora-eth-connector.git" }
near-sdk = "4.1"
near-contract-standards = "4.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
