[package]
name = "mock_eth_connector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.8.0", default-features = false }
near-contract-standards = "5.9.0"
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", tag = "v0.4.1" }
near-sdk = "5.9.0"
borsh = "1.5.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[patch.crates-io]
parity-secp256k1 = { git = 'https://github.com/paritytech/rust-secp256k1', rev = "d05fd8e" }
