[package]
name = "mock_evm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aurora-workspace-types = { path = "../../workspace-types", features = ["mock"] }
near-sdk = "4.0"
serde = { version = "1", features = ["derive"] }
getrandom = {version = "0.2", default-features = false, features = ["custom"]}


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
